# RunnerGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
42run/Headers/: AssetProcessor.hpp  Buffer.hpp  Camera.hpp  Collider.hpp  Consts.hpp  Debug.hpp  Engine.hpp  Event.hpp  Font.hpp  GameObject.hpp  GlError.hpp  GraphicsContext.hpp  Mesh.hpp  MeshRenderer.hpp  Model.hpp  Pointer.hpp  Primitives.hpp  Renderer.hpp  ResourceManager.hpp  RigidBody.hpp  Scene.hpp  Screen.hpp  Shader.hpp  Text.hpp  Texture.hpp  Time.hpp  Transform.hpp  Triangle.hpp  Vertex.hpp  VertexArray.hpp  Window.hpp
42run/Models/LeftTable/: LeftTable.mtl
42run/Models/RightTable/: RightTable.mtl
42run/Models/Tunel/: Tunel.mtl
42run/Models/TwoColumns/: TwoColumns.mtl
42run/Models/TwoTables/: TwoTables.mtl
42run/Scenes/: BoxTransformScene.cpp  CameraScene.cpp  FontScene.cpp  GameObjectScene.cpp  GameScene.cpp  LoadModelScene.cpp  PhysicsScene.cpp  SimpleIlluminationScene.cpp  SquareScene.cpp  main.cpp
42run/Shaders/: Time.cpp  basic.frag  camera.vert  gui.frag  gui.vert  illumination.frag  illumination.vert  normal.frag  normal.vert  texture.frag  transform.vert
42run/Sources/: 3DboxScene.cpp  AssetProcessor.cpp  BoxTransformScene.cpp  Buffer.cpp  Camera.cpp  Camera.hpp  CameraScene.cpp  Collider.cpp  Engine.cpp  Event.cpp  Font.cpp  FontScene.cpp  GameObject.cpp  GameObjectScene.cpp  GameScene.cpp  GlError.cpp  GraphicsContext.cpp  Lesson2.cpp  LoadModelScene.cpp  MeshRenderer.cpp  Model.cpp  PhysicsScene.cpp  Renderer.cpp  ResourceManager.cpp  RigidBody.cpp  Scene.cpp  Screen.cpp  Shader.cpp  SimpleIlluminationScene.cpp  SquareScene.cpp  Text.cpp  Texture.cpp  TextureScene.cpp  Time.cpp  Transform.cpp  Triangle.cpp  VertexArray.cpp  Window.cpp  main
